添加 Spark AQE 相关图片。